Add Goal functionality and tests

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
   <br><%= link_to "Sign In", new_session_url %>
   <br><%= link_to "Sign Up", new_user_url %>
 <% end %>
-
+<center>
 <%= yield %>
-
+</center>
 </body>
 </html>
